<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.detail.DetailFragment">

        <ImageView
            android:id="@+id/imageDetail"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/rectangle_8"
            android:layout_width="341dp"
            android:layout_height="67dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/rectangle_detail"
            app:layout_constraintBottom_toBottomOf="@+id/imageDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewImages"
            android:layout_width="300dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageDetail"
            app:layout_constraintEnd_toEndOf="@+id/rectangle_8"
            app:layout_constraintStart_toStartOf="@+id/rectangle_8"
            app:layout_constraintTop_toTopOf="@+id/rectangle_8"
            tools:ignore="SpeakableTextPresentCheck"
            tools:listitem="@layout/item_detail_recycler" />

        <TextView
            android:id="@+id/txtCity"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="top"
            android:lineSpacingExtra="4sp"
            android:text="@string/name"
            android:textAppearance="@style/name"
            android:translationY="-1.83sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageDetail" />

        <TextView
            android:id="@+id/txtCountry"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="top"
            android:lineSpacingExtra="2sp"
            android:text="@string/bali_indone"
            android:textAppearance="@style/bali_indone"
            android:translationY="-0.98sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCity" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="top"
            android:lineSpacingExtra="5sp"
            android:text="@string/description"
            android:textAppearance="@style/description"
            android:translationY="-2.65sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCountry" />

        <Button
            android:id="@+id/buttonAddBookmark"
            android:layout_width="309dp"
            android:layout_height="54dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="60dp"
            android:src="@drawable/bg_button"
            android:text="@string/add_bookmar"
            android:textAppearance="@style/add_bookmark"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>