<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/frame_21"
            android:layout_width="49dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/search_nearby_frame"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <ImageButton
            android:id="@+id/iconBookMark"
            android:layout_width="19.2dp"
            android:layout_height="19.2dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/selector_trip_bookmark"
            android:clipToOutline="true"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/txtCategory"
            android:layout_width="37dp"
            android:layout_height="18dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/hotel"
            android:textAppearance="@style/hotel"
            app:layout_constraintBottom_toBottomOf="@+id/frame_21"
            app:layout_constraintEnd_toEndOf="@+id/frame_21"
            app:layout_constraintStart_toStartOf="@+id/frame_21"
            app:layout_constraintTop_toTopOf="@+id/frame_21" />

        <TextView
            android:id="@+id/txtCountry"
            android:layout_width="337dp"
            android:layout_height="31dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/source_sans_pro"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/near_region"
            android:textAppearance="@style/near_region"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/frame_21" />

        <TextView
            android:id="@+id/txtCity"
            android:layout_width="337dp"
            android:layout_height="23dp"
            android:fontFamily="@font/source_sans_pro"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/near_city"
            android:textAppearance="@style/near_city"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/txtCountry"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>